@@ -6,6 +6,11 @@
 ==========更新日志==========
 
 
+==========5.20==========
+2025-3-1
+1. 修复listview清空或删除视图后页面元素仍占用内存的问题
+2. 修复TinUIXml(allanchor)对齐方式分配id不唯一的问题
+
 ==========5.19==========
 2025-2-27
 1. listview增加清空方法
